1973
This doesn't compile any more on 2.9.0.r24145-b20110130020134

{code}
<console>:7: error: The kind of trait T does not conform to the expected kind of type T[X] in trait A.
B.T's type parameters do not match type T's expected parameters: type X (in object B) has one type parameter, but type X (in trait A) has none
         trait T[X[_]]
               ^
{code}
